--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -4,13 +4,13 @@
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Accepter les conditions"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "Permissions supplémentaires requises"
   },
-  "ads": {
-    "message": "Ads"
+  "ads___onboarding": {
+    "message": "Publicités"
   },
   "adult_advertising": {
     "message": "Publicités réservées aux publics adultes",
@@ -21,19 +21,19 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Toutes les fenêtres contextuelles"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "Ça y est ! Utiliser ghosty !"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "Des questions? Nous sommes là pour vous !"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "Vraiment ?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "Voulez-vous vraiment reporter l'activation de Ghostery ?"
   },
   "audio_video_player": {
     "message": "Lecteur audio/vidéo ",
@@ -62,14 +62,14 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Consultez notre <a href=\"$${0}\" target=\"_blank\">FAQ</a> ou écrivez-nous à l'adresse <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Nous serons ravis de vous répondre !"
   },
   "comments": {
     "message": "Commentaires",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "continue": {
-    "message": "Continue"
+    "message": "Continuer"
   },
   "customer_interaction": {
     "message": "Interaction avec les clients",
@@ -82,7 +82,7 @@
     "message": "Désactiver la roue des trackers dans la barre d’outils du navigateur"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Désact. aperçu des mouchards"
   },
   "done": {
     "message": "Terminé"
@@ -92,10 +92,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Activer Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Donnez le feu vert à Ghostery"
   },
   "essential": {
     "message": "Essentiels",
@@ -106,35 +106,35 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "Pour plus d'information, lisez notre"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery est inactif"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery est actif"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghostery est conçu pour protéger votre vie privée en mettant en échec les mouchards quand vous naviguez !"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "Ghostery neutralise les mouchards pour empêcher autrui de dresser votre profil et de s'enrichir en vendant vos renseignements personnels à des courtiers en données."
   },
   "ghostery_options": {
     "message": "Ghostery Options"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Politique de confidentialité de Ghostery"
   },
   "hosting": {
     "message": "Hébergement",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Je veux transmettre des renseignements non personnels à <a href=\"$${0}\">WhoTracks.Me</a> et j'accepte la <a href=\"$${1}\">Politique de confidentialité</a> de Ghostery."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "Son existence est rendue possible par chaque utilisateur de Ghostery qui micro-contribue en envoyant des informations sur les mouchards à whotracks.me. La rétroaction permet à Ghostery de fournir des informations en temps réel sur les mouchards et de protéger toute la communauté Ghostery. "
   },
   "manifest_name": {
     "message": "Ghostery – Bloqueur de publicité protégeant la vie privée"
@@ -147,7 +147,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "En savoir plus sur $${0}."
   },
   "off": {
     "message": "désactivé"
@@ -159,7 +159,7 @@
     "message": "Chargement de la page"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "politique de confidentialité"
   },
   "privacy_protection_on_this_site": {
     "message": "Protection de la vie privée sur ce site"
@@ -192,7 +192,7 @@
     "message": "Soumettre un nouveau mouchard"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "L'extension Ghostery Browser est installée dans votre navigateur, mais Ghosty fait une petite sieste."
   },
   "tracker_details": {
     "message": "Détails du traqueur"
@@ -201,7 +201,7 @@
     "message": "mouchards"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Aperçu mouchards"
   },
   "unblocked": {
     "message": "Débloqué"
@@ -214,24 +214,24 @@
     "message": "User interface"
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Bienvenue sur"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "Qu'est-ce que whotracks.me ?"
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.me est la ressource globale la plus complète au sujet des mouchards. Exploitée par Ghostery, elle met en lumière le pistage sur le Web."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "En activant Ghostery, vous serez plus rapide, plus en sécurité et vous verrez moins de pubs agaçantes."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Vous pouvez changer d'idée à tout moment et activer Ghostery dans les paramètres afin qu'il piste les mouchards pour vous."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Vous avez choisi de reporter l'activation de Ghostery !"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Tout est prêt, Ghosterien·ne !"
   }
 }
