--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -4,13 +4,13 @@
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Aceptar términos"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "Se requieren permisos adicionales"
   },
-  "ads": {
-    "message": "Ads"
+  "ads___onboarding": {
+    "message": "Anuncios"
   },
   "adult_advertising": {
     "message": "Publicidad para adultos",
@@ -21,19 +21,19 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Todas las ventanas emergentes"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "¡Todo listo! vamos con ghosty!"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "¿Preguntas? ¡Cuando quieras!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "¿Seguro?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "¿Seguro que quieres omitir la activación de Ghostery?"
   },
   "audio_video_player": {
     "message": "Reproductor de audio/vídeo",
@@ -62,14 +62,14 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Consulta las <a href=\"$${0}\" target=\"_blank\">preguntas frecuentes</a> o escríbenos a <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. ¡Nos encanta poder hablar contigo!"
   },
   "comments": {
     "message": "Comentarios",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "continue": {
-    "message": "Continue"
+    "message": "Continuar"
   },
   "customer_interaction": {
     "message": "Interacción con el cliente",
@@ -82,7 +82,7 @@
     "message": "Desactivar rueda del rastreador en la barra de herramientas del navegador"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Deshabilitar vista previa de rastreadores"
   },
   "done": {
     "message": "Hecho"
@@ -92,10 +92,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Habilitar Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Activa Ghostery para empezar"
   },
   "essential": {
     "message": "Esencial",
@@ -106,35 +106,35 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "Para obtener más información, lee todos nuestros"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery deshabilitado"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery habilitado"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "¡Ghostery está listo para detener a los rastreadores y proteger tu privacidad mientras navegas!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "Ghostery les para los pies a los rastreadores evitando que realicen perfiles sobre ti y que tu información personal se venda a intermediarios de datos para su propio beneficio."
   },
   "ghostery_options": {
     "message": "Ghostery Options"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Política de privacidad de Ghostery"
   },
   "hosting": {
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Acepto enviar información no personal a <a href=\"$${0}\">WhoTracks.Me</a> y acepto la <a href=\"$${1}\">Política de privacidad</a> de Ghostery"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "Existe gracias a las microcontribuciones de aquellos usuarios de Ghostery que eligen enviar información de seguimiento a whotracks.me. La entrada del rastreador permite a Ghostery proporcionar información en tiempo real sobre rastreadores y protección a toda la comunidad de usuarios de Ghostery."
   },
   "manifest_name": {
     "message": "Ghostery – Bloqueador de anuncios para privacidad"
@@ -147,7 +147,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "Más información sobre $${0}."
   },
   "off": {
     "message": "No"
@@ -159,7 +159,7 @@
     "message": "Carga de página"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "política de privacidad"
   },
   "privacy_protection_on_this_site": {
     "message": "Protección de la privacidad en este sitio"
@@ -168,7 +168,7 @@
     "message": "Informar página rota"
   },
   "show_trackers_preview_next_to_search_results": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Mostrar vista previa de rastreadores junto a los resultados de la búsqueda"
   },
   "site_analytics": {
     "message": "Estadísticas de sitios",
@@ -192,7 +192,7 @@
     "message": "Enviar nuevo rastreador"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "La extensión del navegador Ghostery está instalada en su navegador, pero Ghosty se está echando una siestecita."
   },
   "tracker_details": {
     "message": "Detalles del rastreador"
@@ -201,7 +201,7 @@
     "message": "Rastreadores"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Vista previa de rastreadores"
   },
   "unblocked": {
     "message": "Desbloqueado"
@@ -214,24 +214,24 @@
     "message": "User interface"
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Te damos la bienvenida a"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "¿Qué es whotracks.me?"
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.me, operado por Ghostery, es el recurso global más completo sobre rastreadores y permite aportar mayor transparencia al seguimiento web."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "Al habilitar Ghostery, puedes navegar por la web de manera más segura, más rápida y con anuncios menos molestos instantáneamente."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Si cambias de opinión en cualquier momento, también puedes hacer que Ghostery comience a vigilar a los rastreadores por ti en la configuración de Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "¡Has elegido no habilitar Ghostery!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "¡Ya estás a punto, ghosteriniano/a!"
   }
 }
