--- a/extension-manifest-v3/src/_locales/hu/messages.json
+++ b/extension-manifest-v3/src/_locales/hu/messages.json
@@ -4,13 +4,13 @@
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Feltételek elfogadása"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "További engedélyek szükségesek"
   },
-  "ads": {
-    "message": "Ads"
+  "ads___onboarding": {
+    "message": "Hirdetések"
   },
   "adult_advertising": {
     "message": "Felnőtt hirdetés",
@@ -21,19 +21,19 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Minden felugró ablak"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "Minden kész! Legyen a Ghostly az ön társa!"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "Kérdése van? Csak bátran!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "Biztos benne?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "Biztos, hogy nem akarja engedélyezni a Ghostery-t?"
   },
   "audio_video_player": {
     "message": "Zene-/filmlejátszó",
@@ -62,14 +62,14 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Tekintse meg a <a href=\"$${0}\" target=\"_blank\">FAQ-kat</a> weboldalt, vagy írjon nekünk a <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a> címre! Örömmel állunk rendelkezésére!"
   },
   "comments": {
     "message": "Hozzászólások",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "continue": {
-    "message": "Continue"
+    "message": "Folytatás"
   },
   "customer_interaction": {
     "message": "Ügyfélkommunikáció",
@@ -82,7 +82,7 @@
     "message": "Tracker Kerék letiltása a böngésző eszköztárában"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Nyomonkövetők előnézetének letiltása"
   },
   "done": {
     "message": "Kész"
@@ -92,10 +92,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Ghostery engedélyezése"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Engedélyezze a Ghostery-t a kezdéshez"
   },
   "essential": {
     "message": "Alapvető",
@@ -106,35 +106,35 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "További információért olvassa el a teljes"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery letiltva"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery engedélyezve"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "A Ghostery úgy van beállítva, hogy hatástalanítsa a nyomkövetőket, és megvédje a magánéletét böngészés közben!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "A Ghostery hatástalanítja a nyomkövetőket, és megakadályozza, hogy profilozzák önt és személyes adatait eladják adatbrókereknek a saját profitjuk érdekében."
   },
   "ghostery_options": {
     "message": "Ghostery Options"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Ghostery Adatvédelmi Szabályzat"
   },
   "hosting": {
     "message": "Hosztolás",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Hozzájárulok, hogy a nem személyes adataimat elküldjék a <a href=\"$${0}\">WhoTracks.Me</a> részére, és elfogadom a Ghostery <a href=\"$${1}\">Adatvédelmi Szabályzatát</a>."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "A Ghostery minden olyan Ghostery-felhasználó mikro-hozzájárulásának köszönhetően létezik, aki úgy dönt, hogy nyomonkövető információkat küld a whotracks.me-nek. A nyomonkövető adatok átadása lehetővé teszi a Ghostery számára, hogy valós idejű információkat szolgáltasson a nyomonkövetőkről és a védelemről a teljes Ghostery felhasználói közösség számára."
   },
   "manifest_name": {
     "message": "Ghostery – Adatavédelmi Reklámblokkoló"
@@ -147,7 +147,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "További információ a $$${0}-ról."
   },
   "off": {
     "message": "Ki"
@@ -159,7 +159,7 @@
     "message": "Oldal betöltése"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "Adatvédelmi Szabályzat"
   },
   "privacy_protection_on_this_site": {
     "message": "Adatvédelem ezen az oldalon"
@@ -168,7 +168,7 @@
     "message": "Hibás oldal jelentése"
   },
   "show_trackers_preview_next_to_search_results": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Nyomonkövetők előnézetének megjelenítése a keresési eredmények mellett"
   },
   "site_analytics": {
     "message": "Webanalitika",
@@ -192,7 +192,7 @@
     "message": "Új tracker beküldése"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "A Ghostery böngészőbővítmény telepítve van a böngészőjébe, de Ghosty éppen szundikál."
   },
   "tracker_details": {
     "message": "Tracker adatok"
@@ -201,7 +201,7 @@
     "message": "Trackerek"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Nyomonkövetők előnézete"
   },
   "unblocked": {
     "message": "Feloldva"
@@ -214,24 +214,24 @@
     "message": "User interface"
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Üdvözöljük"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "Mi az a whotracks.me?"
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "A Ghostery által üzemeltetett WhoTracks.me a legátfogóbb globális adatforrás a nyomonkövetőkről, átláthatóvá téve a webes nyomkövetést."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "A Ghostery engedélyezésével azonnal biztonságosabban, gyorsabban és kevesebb idegesítő hirdetéssel böngészhet a weben."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Bármikor meggondolhatja magát, és engedélyezheti a Ghostery beállításaiban, hogy a Ghostery elkezdje a nyomonkövetők követését."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Úgy döntött, hogy kihagyja a Ghostery engedélyezését!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Minden készen áll, Ghostery-rajongó!"
   }
 }
