--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -4,13 +4,13 @@
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "条件を受け入れる"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "必要な追加パーミッション"
   },
-  "ads": {
-    "message": "Ads"
+  "ads___onboarding": {
+    "message": "広告"
   },
   "adult_advertising": {
     "message": "アダルト広告",
@@ -21,19 +21,19 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "すべてのポップアップ"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "準備万端! ゴーストと立ち向かいましょう！"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "何か質問は？ いつでもOK!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "本当に行いますか？"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "本当にGhosteryを有効にしなくてもいいのですか？"
   },
   "audio_video_player": {
     "message": "オーディオ/ビデオ・プレーヤー",
@@ -62,14 +62,14 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "<a href=\"$${0}\" target=\"_blank\">FAQ</a> をご覧いただくか、<a href=\"mailto:support@ghostery.com\">support@ghostery.com</a> までご連絡ください。 ぜひ、ご相談ください。"
   },
   "comments": {
     "message": "コメント",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "continue": {
-    "message": "Continue"
+    "message": "継続"
   },
   "customer_interaction": {
     "message": "顧客インタラクション",
@@ -82,7 +82,7 @@
     "message": "ブラウザのツールバーでトラッカーホイールを無効にする"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "トラッカーの無効化プレビュー"
   },
   "done": {
     "message": "完了"
@@ -92,10 +92,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Ghosteryを有効にする"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Ghosteryを有効にして開始する"
   },
   "essential": {
     "message": "必需",
@@ -106,35 +106,35 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "詳細はこちらをご覧ください"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghosteryが無効化"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghosteryが有効化"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するように設定されています!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られ、利益を得ることを防いでいます。"
   },
   "ghostery_options": {
     "message": "Ghostery Options"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Ghosteryプライバシー・ポリシー"
   },
   "hosting": {
     "message": "ホスティング",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "<a href=\"$${0}\">WhoTracks.Me</a> に個人情報以外の情報を送信することに同意し、Ghosteryの<a href=\"$${1}\">Privacy Policy</a> を承諾します。"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "これは、whotracks.meにトラッカー情報を送信することを選択したGhosteryユーザー全員による、少額の寄付のおかげで存在しています。 トラッカーの入力により、Ghosteryはトラッカーと保護に関するリアルタイムの情報をGhosteryのユーザーコミュニティ全体に提供することができます。"
   },
   "manifest_name": {
     "message": "Ghostery – プライバシー広告ブロッカー"
@@ -147,7 +147,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "詳細は$${0}で。"
   },
   "off": {
     "message": "オフ"
@@ -159,7 +159,7 @@
     "message": "ページのロード"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "プライバシー・ポリシー"
   },
   "privacy_protection_on_this_site": {
     "message": "このサイトのプライバシー保護"
@@ -168,7 +168,7 @@
     "message": "区切られたページを報告"
   },
   "show_trackers_preview_next_to_search_results": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "検索結果の隣にトラッカーのプレビューを表示する"
   },
   "site_analytics": {
     "message": "サイト分析",
@@ -192,7 +192,7 @@
     "message": "新しいトラッカーを提出"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、Ghostyは休止中です。"
   },
   "tracker_details": {
     "message": "トラッカーの詳細"
@@ -201,7 +201,7 @@
     "message": "トラッカー"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "トラッカーのプレビュー"
   },
   "unblocked": {
     "message": "ブロックされていない対象"
@@ -214,24 +214,24 @@
     "message": "User interface"
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "ようこそ！"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "whotracks.meとは何か？"
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "Ghosteryが運営するWhoTracks.meは、トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "Ghosteryを有効にすると、より安全に、より速く、そして迷惑な広告をより減らす形で、ウェブを瞬時にブラウズすることができます。"
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "お客様はいつでも考えが変わったときに、Ghosteryの設定によって、お客様へのトラッカーの追跡開始を有効にすることができます。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Ghosteryの有効化のスキップを選択しました。"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Ghosteryの仲間として、これで大丈夫です!"
   }
 }
