--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -4,13 +4,13 @@
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Aceitar termos"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "Permissões adicionais necessárias"
   },
-  "ads": {
-    "message": "Ads"
+  "ads___onboarding": {
+    "message": "Anúncios"
   },
   "adult_advertising": {
     "message": "Anúncios adultos",
@@ -21,19 +21,19 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Todos as popups"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "Tudo pronto! vá com o fantasminha!"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "Alguma pergunta? A qualquer momento!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "Tem certeza?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "Tem a certeza de que quer saltar a ativação do Ghostery?"
   },
   "audio_video_player": {
     "message": "Reprodutor de Áudio/Vídeo",
@@ -62,14 +62,14 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Confira as <a href=\"$${0}\" target=\"_blank\">perguntas frequentesFAQs</a> ou escreva para a gente em <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Teremos todo o prazer em falar com você!"
   },
   "comments": {
     "message": "Comentários",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "continue": {
-    "message": "Continue"
+    "message": "Continuar"
   },
   "customer_interaction": {
     "message": "Interação com o cliente",
@@ -82,7 +82,7 @@
     "message": "Desativar o Tracker Wheel na barra de ferramentas do navegador"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Desativar a visualização de rastreadores"
   },
   "done": {
     "message": "Pronto"
@@ -92,10 +92,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Ativar o Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Autorize o Ghostery para começar"
   },
   "essential": {
     "message": "Essencial",
@@ -106,35 +106,35 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "Para mais informações, leia a nossa versão completa"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery desativado"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery ativado"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "O Ghostery está configurado para parar os rastreadores e proteger sua privacidade ao navegar!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "O Ghostery está parando os rastreadores e impedindo que seu perfil seja criado e suas informações pessoais sejam vendidas a negociadores de dados para que obtenham lucro."
   },
   "ghostery_options": {
     "message": "Ghostery Options"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Política de Privacidade do Ghostery"
   },
   "hosting": {
     "message": "Hospedando",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Concordo em enviar informações não pessoais para a <a href=\"$${0}\">WhoTracks.Me</a> e eu aceito a <a href=\"$${1}\">Política de Privacidade</a> do Ghostery"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "Ele existe graças às microcontribuições de cada usuário do Ghostery que opta por enviar informações do rastreador para whotracks.me. A entrada do rastreador permite que o Ghostery forneça informações em tempo real sobre rastreadores e proteção para toda a comunidade de usuários do Ghostery."
   },
   "manifest_name": {
     "message": "Ghostery – Bloqueador de anúncios para privacidade"
@@ -147,7 +147,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "Mais informações sobre $${0}."
   },
   "off": {
     "message": "Desligado"
@@ -159,7 +159,7 @@
     "message": "Carregar página"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "política de privacidade"
   },
   "privacy_protection_on_this_site": {
     "message": "Proteção de privacidade neste site"
@@ -168,7 +168,7 @@
     "message": "Relatar uma página quebrada"
   },
   "show_trackers_preview_next_to_search_results": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Mostrar visualização de rastreadores ao lado dos resultados da pesquisa"
   },
   "site_analytics": {
     "message": "Analítica do site",
@@ -192,7 +192,7 @@
     "message": "Enviar um novo rastreador"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghosty está tirando uma soneca leve."
   },
   "tracker_details": {
     "message": "Detalhes do rastreador"
@@ -201,7 +201,7 @@
     "message": "Rastreadores"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Prévia de rastreadores"
   },
   "unblocked": {
     "message": "Desbloqueados"
@@ -214,24 +214,24 @@
     "message": "User interface"
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Bem-vindo a"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "O que é whotracks.me?"
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghostery está tirando uma soneca leve."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, rápida e com menos anúncios irritantes."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Você pode mudar de ideia a qualquer momento e permitir que o Ghostery comece a rastrear os rastreadores para você nas configurações do Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Você optou por ignorar a ativação do Ghostery!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Está tudo pronto, fantasmagórico!"
   }
 }
