--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -4,13 +4,13 @@
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "接受条款"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "需要额外的权限"
   },
-  "ads": {
-    "message": "Ads"
+  "ads___onboarding": {
+    "message": "条广告"
   },
   "adult_advertising": {
     "message": "成人广告",
@@ -21,19 +21,19 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "所有弹出窗口"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "一切就绪！ 使用 Ghosty！"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "有疑问？ 随时为您解答！"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "确定吗？"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "确定要跳过启用 Ghostery 吗？"
   },
   "audio_video_player": {
     "message": "音频/视频播放器",
@@ -62,14 +62,14 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "请查看<a href=\"${0}\" target=\"_blank\">常见问题解答</a>或给我们留言：<a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>。 我们将非常乐意与您交谈！"
   },
   "comments": {
     "message": "评论",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "continue": {
-    "message": "Continue"
+    "message": "继续"
   },
   "customer_interaction": {
     "message": "客户互动",
@@ -82,7 +82,7 @@
     "message": "在浏览器工具栏中禁用跟踪器轮盘"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "禁用跟踪器预览"
   },
   "done": {
     "message": "完成"
@@ -92,10 +92,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "启用 Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "启用 Ghostery 以开始使用"
   },
   "essential": {
     "message": "基本",
@@ -106,35 +106,35 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "欲了解更多信息，请阅读我们的完整"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery 已禁用"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery 已启用"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghostery 是为了在浏览时阻止跟踪器并保护您的隐私！"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "Ghostery 正在阻止跟踪器，防止他人分析您的用户特征并将您的个人信息出售给数据中介来牟利。"
   },
   "ghostery_options": {
     "message": "Ghostery Options"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Ghostery 隐私政策"
   },
   "hosting": {
     "message": "托管",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "我同意向 <a href=\"${0}\">WhoTracks.Me</a> 发送非个人信息，我接受 Ghostery <a href=\"${1}\">隐私政策</a>。"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "它的存在要归功于每个选择将跟踪器信息发送给 whotracks.me 的 Ghostery 用户的微小贡献。 跟踪器输入使 Ghostery 能够为整个 Ghostery 用户社区提供有关跟踪器的实时情报和保护。"
   },
   "manifest_name": {
     "message": "Ghostery – 隐私广告拦截工具"
@@ -147,7 +147,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "关于 ${0} 的更多信息。"
   },
   "off": {
     "message": "关闭"
@@ -159,7 +159,7 @@
     "message": "网页加载"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "隐私政策"
   },
   "privacy_protection_on_this_site": {
     "message": "此网站上的隐私保护"
@@ -168,7 +168,7 @@
     "message": "报告崩溃页面"
   },
   "show_trackers_preview_next_to_search_results": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "在搜索结果旁显示跟踪器预览"
   },
   "site_analytics": {
     "message": "网站分析",
@@ -192,7 +192,7 @@
     "message": "提交新跟踪器"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "Ghostery 浏览器扩展程序已安装在您的浏览器中，但 Ghosty 暂未工作。"
   },
   "tracker_details": {
     "message": "跟踪器详情"
@@ -201,7 +201,7 @@
     "message": "跟踪器"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "跟踪器预览"
   },
   "unblocked": {
     "message": "未拦截"
@@ -214,24 +214,24 @@
     "message": "User interface"
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "欢迎使用"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "什么是 whotracks.me？"
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.me 由 Ghostery 运营，是全球最全面的跟踪器资源，为网络跟踪带来透明度。"
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "启用 Ghostery 后，您可以立即更安全、更快速地浏览网页，并减少恼人的广告。"
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "您可以随时改变主意，在 Ghostery 设置中启用 Ghostery 开始追踪跟踪器。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "您选择跳过启用 Ghostery！"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Ghostery，一切准备就绪！"
   }
 }
